...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_roommate_set_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
...
        android:text="Apartment details"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/sv_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
...
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_save_roommate_searcher_profile"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
                android:textSize="20sp"

                app:layout_constraintBottom_toTopOf="@id/spinner_neighborhood"
                app:layout_constraintStart_toStartOf="@+id/cl_details"
                app:layout_constraintTop_toTopOf="parent" />
...
                android:textColor="@android:color/secondary_text_light"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/iv_choose_apartment_entry_date"
                app:layout_constraintStart_toStartOf="@+id/cl_details"
                app:layout_constraintTop_toBottomOf="@+id/iv_sep_line1" />
...
                android:textColor="@android:color/secondary_text_light"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/radioGroup_num_of_roommates"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_sep_line2" />
...

                <RadioButton
                    android:id="@+id/radio_btn_num_of_roommates_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                android:textColor="@android:color/secondary_text_light"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/et_apartment_rent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_sep_line3" />
...
                android:textColor="@android:color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/et_rs_min_age_val"
                app:layout_constraintTop_toTopOf="@+id/et_rs_min_age_val" />

...
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/iv_sep_line5"
                app:layout_constraintEnd_toStartOf="@+id/et_rs_max_age_val"
                app:layout_constraintHorizontal_bias="0.444"
                app:layout_constraintStart_toEndOf="@+id/et_rs_min_age_val"
...

            <EditText
                android:id="@+id/et_enter_age"
                android:layout_width="320dp"
                android:layout_height="50dp"
...

            <RadioGroup
                android:id="@+id/radio_group_choose_gender"
                android:layout_width="320dp"
                android:layout_height="50dp"
...

                <RadioButton
                    android:id="@+id/radio_btn_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    android:fontFamily="sans-serif"
                    android:paddingEnd="12dp"
                    android:text="Gentleman"
                    android:textColor="@android:color/secondary_text_light"
                    android:textColorLink="#4CAF50"
...

            <EditText
                android:id="@+id/et_phone_number"
                android:layout_width="320dp"
                android:layout_height="50dp"
...

            <EditText
                android:id="@+id/et_apartment_info"
                android:layout_width="320dp"
                android:layout_height="215dp"
...
