<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.05"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/house_back_img" />


    <ImageView
        android:id="@+id/iv_roome_logo"
        android:layout_width="351dp"
        android:layout_height="146dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_roome_logo" />


    <EditText
        android:id="@+id/et_first_name_without_google"
        android:layout_marginTop="64dp"
        android:background="@drawable/ic_et_back"
        android:ems="10"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:ellipsize="none"
        android:fontFamily="sans-serif"
        android:gravity="start|center_horizontal"
        android:hint="@string/first_name"
        android:paddingStart="12dp"
        android:paddingTop="8dp"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_roome_logo" />

    <EditText
        android:id="@+id/et_last_name_without_google"
        android:layout_marginTop="24dp"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_et_back"
        android:ellipsize="none"
        android:fontFamily="sans-serif"
        android:gravity="start|center_horizontal"
        android:paddingStart="12dp"
        android:paddingTop="8dp"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_first_name_without_google" />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/or_sign_in_with_google"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_without_google" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_sign_in"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:visibility="visible"
        app:buttonSize="standard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_or" />

    <Button
        android:id="@+id/btn_sign_without_google"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="signWithoutGoogleFunc"
        android:text="@string/create_account_and_sign_in"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@color/peach"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_last_name_without_google" />

</androidx.constraintlayout.widget.ConstraintLayout>


