<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_choosing_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ChoosingActivity">

    <TextView
        android:id="@+id/tv_hello_name"
...
        app:layout_constraintBottom_toBottomOf="@+id/iv_choosing_button_apt"
        app:layout_constraintEnd_toEndOf="@+id/iv_choosing_button_apt"
        app:layout_constraintStart_toStartOf="@+id/iv_choosing_button_apt"
        app:layout_constraintTop_toBottomOf="@+id/tv_apt_to_join_txt" />

    <ImageView
        android:id="@+id/iv_choosing_button_roommate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:onClick="roommateSearcherOnclick"
        app:layout_constraintBottom_toBottomOf="@+id/iv_main_back_img2"
        app:layout_constraintEnd_toEndOf="parent"
...
