<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityRoommateSearcher">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs_roomate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/viewpager_roomate"
        android:layout_marginBottom="0dp"
        app:tabGravity="fill"
        app:tabIndicatorAnimationDuration="300"
        app:tabIndicatorGravity="top"
        app:tabMode="fixed"
        app:tabTextColor="#00D10303" />

    <com.example.roome.CustomViewPager
        android:id="@+id/viewpager_roomate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
</RelativeLayout>